@@ -128,21 +128,6 @@ a:hover .link-icons {
         contrast(93%);
 }
 
-.card-icons {
-    height: 2.5vh;
-    width: auto;
-}
-
-.card-icons:hover {
-    filter: 
-        invert(68%) 
-        sepia(56%) 
-        saturate(246%) 
-        hue-rotate(357deg) 
-        brightness(85%) 
-        contrast(83%);
-}
-
 /* header section */
 .header {
     background-color: #ffffff; /* can change color when finished*/
@@ -151,22 +136,38 @@ a:hover .link-icons {
     grid-column: 2;
     grid-row: 1;
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 1fr 2fr 2fr;
     grid-template-rows: 1fr 2fr;
 }
 
 /* search bar */
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem; 
+    grid-column: 1; 
+    margin-left: 1.5vw; 
+    margin-top: 0.5vh;
+    margin-bottom: 1vh;
+}
+
 .header input[type=search] {
     padding: 6px;
     border: none;
     margin-top: 16px;
     margin-right: 16px;
-    margin-left: 70px;
     font-size: 17px;
+    min-width: 30vw;
     max-width: 45vw;
     max-height: 25px;
     border-radius: 20px;
     background: #e2e8f0; 
+}
+
+.magnify {
+    height: 2.5vh;
+    width: auto;
+    margin-top: 16px;
 }
 
 /* large user info section */
@@ -175,6 +176,7 @@ a:hover .link-icons {
     align-items: center;
     gap: 1rem; 
     padding-left: 2rem; 
+    grid-column: 1 / 3;
 }
 
 .icon-large {
@@ -190,8 +192,10 @@ a:hover .link-icons {
     align-items: center;
     justify-content: flex-end;
     gap: 1rem; 
-    padding-right: 4.5vw; 
-    padding-top: 10px;
+    margin-right: 4.5vw; 
+    margin-top: 0.75vh;
+    margin-bottom: 1vh;
+    grid-column: 3;
 }
 
 .icon-small {
@@ -207,11 +211,13 @@ a:hover .link-icons {
 
 /* header buttons */
 .buttons {
+    grid-column: 3;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 1rem; 
-    padding-right: 2vw; 
+    margin-top: 2vh;
+    margin-right: 2vw; 
 }
 
 button {
@@ -248,7 +254,8 @@ button:hover {
     grid-column: 2;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    overflow-y: auto; 
+    grid-template-rows: auto 1fr; /* Define row heights */
+    overflow: hidden; /* Let children handle overflow */
 }
 
 .content-header {
@@ -265,21 +272,27 @@ button:hover {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    max-height: 100%; /* Limit to container height */
+    max-width: 1200px; /* Prevents cards from getting too wide */
+    margin: 0 auto; /* Centers the content if max-width is reached */
+    overflow-y: auto; /* Add scrolling for overflow */
 }
 
 .project-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr); /* Force exactly 2 columns */
+    grid-template-rows: repeat(3, auto); /* Force 3 rows */
     gap: 25px;
+    align-content: start; /* Start from the top */
 }
 
 .projects-card {
     background-color: white;
     border-radius: 10px;
-    padding: 35px 35px 35px; 
+    padding: 25px 25px 30px; 
     box-shadow: 5px 5px 3px -3px grey;
     height: auto; 
-    max-height: 215px; 
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -287,6 +300,27 @@ button:hover {
     border-left: 0.5em solid #282A38;
 }
 
+.card-icons-container {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
+    padding-top: 30px;
+}
+
+.card-icons {
+    height: 2.5vh;
+    width: auto;
+}
+
+.card-icons:hover {
+    filter: 
+        invert(68%) 
+        sepia(56%) 
+        saturate(246%) 
+        hue-rotate(357deg) 
+        brightness(85%) 
+        contrast(83%);
+}
 
 /* announcements section */
 .announcements {
@@ -336,6 +370,8 @@ p {
 .trending-card {
     width: 100%;
     max-width: 300px; /* or whatever fixed width you prefer */
+    max-height: 50vh; /* Set maximum height */
+    overflow-y: auto; /* Add scrolling if needed */
 }
 
 .trending {
